fix: 对半 token 刷新时间

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -11,5 +11,14 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script>
+      window.navigator.serviceWorker.register('/src/sw.ts')
+        .then((...args) => console.log('args', args))
+        .catch(console.error)
+
+      self.addEventListener('fetch', (e) => {
+        console.log('e',e)
+      })
+    </script>
   </body>
 </html>
